# Uni.Common

./: CMakeLists.txt  README.md
cmake/: cpm-catch2.cmake
include/: uni_common.h  uni_common_array.h  uni_common_bytes.h  uni_common_compiler.h  uni_common_lrumap.h  uni_common_map.h  uni_common_math.h  uni_common_ringbuffer.h  uni_common_tokenizer.h  unimcu_common_array.h  unimcu_common_bytes.h  unimcu_common_compiler.h  unimcu_common_lrumap.h  unimcu_common_map.h  unimcu_common_math.h  unimcu_common_ringbuffer.h  unimcu_common_tokenizer.h
src/: uni_common_array.c  uni_common_bytes.c  uni_common_libc.c  uni_common_lrumap.c  uni_common_map.c  uni_common_ringbuffer.c  uni_common_tokenizer.c
src_tests/: CMakeLists.txt
src_tests/array/: uni_common_test_array.cpp
src_tests/lrumap/: uni_common_test_lrumap.cpp
src_tests/map/: uni_common_test_map.cpp
src_tests/ringbuffer/: uni_common_ringbuffer_test.cpp  unimcu_common_ringbuffer_test.cpp
